# botstream

./: Cargo.toml  LICENSE  README.md  gen_header.sh  launch_agents.sh  launch_servers.sh
include/: botstream_ffi.h
servers/: cert.pem  index.html  key.pem  signalling_server.py  webrtc.js
src/: bin.rs  launch.rs  lib.rs  main.rs  utils.rs  webrtc.rs
